# wpp_project

./: .gitignore  README.md  pyproject.toml
src/wppproject/: __main__.py  config.toml  get_a_poem.py
src/wppproject/poetry_client/: api.py
src/wppproject/ptoimg/: pti.py
tests/: test_api_client.py
