[tool.poetry]
name = "wppproject"
version = "0.1.0"
description = "Beispielprojekt für die Abgabe für das Modul WPP"
authors = ["Bernhard Bauke <mail@bernhardbauke.de>"]
readme = "README.md"
packages = [{include = "wppproject", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
toml = "^0.10.2"
openai = "^1.11.1"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
